[package]
name = "durin-fault"
description = "Game solver for the OP Stack's FaultDisputeGame"
authors = ["clabby"]

version.workspace = true

[dependencies]
# Internal
durin-primitives = { path = "../primitives" }

# External
alloy-primitives = { version = "0.4.2" }
alloy-sol-types = { version = "0.4.2" }
anyhow = "1.0.75"

[dev-dependencies]
proptest = "1.2.0"
