[package]
name = "durin-fault"
description = "Game solver for the OP Stack's FaultDisputeGame"
resolver = "2"

edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# Workspace
anyhow.workspace = true
tokio.workspace = true
async-trait.workspace = true
alloy-primitives.workspace = true

# Internal
durin-primitives = { path = "../primitives" }

# External
alloy-sol-types = "0.6.0"
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy" }
serde = { version = "1.0.195", features = ["derive"] }
url = "2.5.0"
reqwest = "0.11.23"
futures = "0.3.30"

[dev-dependencies]
proptest = "1.4.0"
