[package]
name = "durin-primitives"
description = "Primitive types for Durin."
resolver = "2"

edition.workspace = true
authors.workspace = true
version.workspace = true

[dependencies]
alloy-primitives = "0.6.0"
anyhow = "1.0.79"
async-trait = "0.1.77"
tokio = { version = "1.35.1", features = ["macros"] }
