[package]
name = "durin-primitives"
description = "Primitive types for Durin."
resolver = "2"

edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# Workspace
tokio.workspace = true
anyhow.workspace = true
async-trait.workspace = true
alloy-primitives.workspace = true
